--- a/css/index.css
+++ b/css/index.css
@@ -1,320 +1,364 @@
-/* 轮播广告 */
-
-.banner {
-	width: 100%;
-	margin: auto;
-	overflow: hidden;
-	position: relative;
+/*
+* @Author: clj
+* @Date:   2017-11-25 20:29:41
+* @Last Modified by:   Administrator
+* @Last Modified time: 2017-11-26 18:59:59
+*/
+html, body {
+	height: 100%;
 }
-
-.banner .img {
-	width: 300%;
-	font-size: 0;
-}
-
-.banner .img img {
-	display: block;
-	width: 100%;
-}
-
-.banner .img li a {
+body {
+	background: #eee;
+	font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+	font-size: 14px;
+	color: #000;
 	margin: 0;
 	padding: 0;
-	display: block;
 }
-
-.banner .img li {
-	display: inline-block;
-	width: 33.3333%;
+.container{
+	height: 100%
 }
-
-.swiper-pagination .swiper-pagination-bullet {
-	width: 30px;
-	height: 3px;
-	border-radius: 0;
-}
-
-@media (max-width:768px) {
-	.banner .btn_con {
-		display: none;
-	}
-	.swiper-pagination .swiper-pagination-bullet {
-		width: 24px;
-		height: 2px;
-	}
-}
-
-
-/*产品动态样式开始*/
-
-.h_big_box {
-	padding: 60px 0;
-	background: #f9f9f9;
-}
-
-.pro_container {
+.swiper-container {
 	width: 100%;
+	height: 100%;
+}
+.swiper-slide {
 	text-align: center;
-	margin-bottom: 40px;
-}
-
-.product_tit {
-	font-size: 24px;
-	color: #333;
-}
-
-.product_en {
-	font-size: 16px;
-	color: #666;
-}
-
-.product_hr {
-	width: 80px;
-	height: 2px;
-	background: #0058ab;
-	margin:10px auto 0; 
-}
-
-.main_container {
-	margin: auto;
-	padding: 0 15px;
-}
-
-.row_container {
-	max-width: 1600px;
-	font-size: 0;
-	margin: auto;
-}
-
-.col_container {
-	display: inline-block;
-	width: 25%;
-	margin-top: 30px;
-}
-
-.col_container img {
-	width: 100%;
-}
-
-.col_margin {
-	padding: 0 10px;
-}
-.col_margin h4{
 	font-size: 18px;
-	font-weight: normal;
-	color: #333;
-}
-
-.col_margin a {
-	position: relative;
 	background: #fff;
-	text-align: center;
-	text-decoration: none;
-	color: #333;
-	overflow: hidden;
-	top: 0;
-	transition: all 0.3s;
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	-ms-transition: all 0.3s;
+
+	/* Center slide text vertically */
+	display: -webkit-box;
+	display: -ms-flexbox;
+	display: -webkit-flex;
+	display: flex;
+	-webkit-box-pack: center;
+	-ms-flex-pack: center;
+	-webkit-justify-content: center;
+	justify-content: center;
+	-webkit-box-align: center;
+	-ms-flex-align: center;
+	-webkit-align-items: center;
+	align-items: center;
 }
 
-.text-muted {
-	font-size: 14px;
-	color: #666;
+
+/*初始化滚动条的样式*/
+.swiper-container-vertical>.swiper-pagination-bullets{
+	left: 10px;
+	right: auto;
+}
+
+.swiper-pagination-bullet{
+	background: #999;
+	opacity: 1;
+}
+.swiper-pagination-bullet-active{
+	background: #007aff;
+}
+@media (max-width: 768px) {
+	.swiper-container-vertical>.swiper-pagination-progressbar{
+		width: 2px;
+	}
+}
+
+.page{
+	width: 100%;
+	height: 100%;
+	position: relative;
+}
+.page1-bg{
+	background: url(../images/index/bg-page1.jpg) no-repeat center;
+	background-size: cover;
+}
+.page2-bg{
+	background: url(../images/index/bg-page2.jpg) no-repeat center;
+	background-size: cover;
+}
+.page3-bg{
+	background: url(../images/index/bg-page3.jpg) no-repeat center;
+	background-size: cover;
+}
+.page4-bg{
+	background: url(../images/index/bg-page4.jpg) no-repeat center;
+	background-size: cover;
+}
+.page5-bg{
+	background: url(../images/index/bg-page5.jpg) no-repeat center;
+	background-size: cover;
+}
+.page6-bg{
+	background: #000;
+}
+
+
+.swiper-slide.menu{
+	padding-top: 100px;  
+	text-align: right;
 	display: block;
-	padding-bottom: 10px;
 }
 
-@media (min-width:769px) {
-	.col_margin a:hover {
-		top: -6px;
-		box-shadow: 1px 1px 20px rgba(3, 3, 3, 0.1);
+.swiper-slide.menu .slider-bar{
+	width: 100%;
+}
+
+.swiper-slide.menu .slider-bar a{
+	color: #fff;
+	display: block;
+	width: 240px;
+	margin-right: 15px;
+}
+.swiper-slide.menu .slider-bar .nav-en{
+		font-size: 26px;
+		font-weight: 700;
+	}
+	.swiper-slide.menu .slider-bar .nav-cn{
+		font-size: 14px;
+	}
+.swiper-slide.menu .slider-bar ul li{
+	padding: 6px 0;
+	margin-top: 30px;
+	width: 100%;
+	transition: all .3s ease-in-out;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+}
+.line {
+	width: 20%;
+	height: 2px;
+	background: #9ebeff;
+	margin: 2px 0;
+	transition: all .3s ease-in-out;
+	-webkit-transition: all .3s ease-in-out;
+	-moz-transition: all .3s ease-in-out;
+	-ms-transition: all .3s ease-in-out;
+}
+
+@media (min-width: 768px) {
+	.swiper-slide.menu .slider-bar ul li:hover{
+		background: #222;
+	}
+	.swiper-slide.menu .slider-bar ul li:hover .line{
+		width: 100%;
 	}
 }
 
-@media (max-width:768px) {
-	.col_container {
-		width: 50%;
-	}
-	.h_big_box {
-		padding: 30px 0;
-	}
-}
+/* 第一屏样式开始 */
 
-
-/*产品动态样式结束*/
-
-.b_big_box {
-	padding: 60px 0;
-	background: #fff;
-}
-
-.edu_big_container {
-	padding: 0 15px;
-	margin: auto;
-}
-
-.edu_big_container .pro_container {
-	margin: 0;
-}
-
-.edu_container {
-	max-width: 1600px;
-	margin: auto;
-}
-
-.edu_container li {
-	width: 33.3333%;
-	float: left;
-	height: 110px;
-	margin-top: 60px;
-}
-
-.pad_official {
-	padding: 0 15px;
-}
-
-.arice {
-	float: left;
-	width: 60px;
-	height: 60px;
-	border-radius: 50%;
-	background: #8ec5f2;
-	position: relative;
-}
-
-.sanjiao {
-	width: 0;
-	height: 0;
-	border-left: 8px solid transparent;
-	border-right: 8px solid transparent;
-	border-top: 16px solid #8ec5f2;
+.page1-con{
 	position: absolute;
-	bottom: -12px;
+	top: 50%;
+	left: 0;
+	right: 0;
+	width: 92%;
+	max-width: 500px;
+	margin: auto;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+	transform: translateY(-50%); 
+}
+.round{
+	position: absolute;
+	width: 80%;
 	left: 0;
 	right: 0;
 	margin: auto;
+	max-width: 300px;
 }
-
-.number {
-	color: #fff;
-	line-height: 60px;
-	height: 60px;
-	text-align: center;
-	font-size: 24px;
+.line-bg{
+	width: 100%;
+	max-width: 500px;
+	min-width: 320px;
 }
-
-.official_box {
-	float: right;
-	width: 84%;
-	margin-left: 10px;
+.page1-con img{
+	width: 100%
 }
-
-.official_box a {
-	text-decoration: none;
+.page1-desc{
+	padding-top: 90px;
 }
-
-.official_box .official_tit {
+.page1-desc p{
+	font-size: 20px;
 	color: #333;
-	font-size: 18px;
 }
 
-.official_box .official_detial {
-	color: #666;
-	font-size: 14px;
+.page1-desc span{
+	font-size: 10px;
 }
 
-@media (max-width: 1600px) {
-	.official_box {
-		width: 80%;
-	}
-}
+/* 第一屏样式结束 */
 
-@media (max-width: 1200px) {
-	.official_box {
-		width: 74%;
-	}
-}
+/* 第二屏样式开始 */
 
-@media (max-width: 1000px) {
-	.edu_container li {
-		width: 50%;
-	}
-	.official_box {
-		width: 78%;
-	}
-}
-
-@media (max-width: 768px) {
-	.edu_container li {
-		width: 100%;
-		height: 70px;
-	}
-	.b_big_box {
-		padding: 30px 0;
-	}
-	.official_box {
-		width: 84%;
-	}
-	.edu_container li:first-of-type {
-		margin-top: 40px;
-	}
-}
-
-@media (max-width: 500px) {
-	.official_box {
-		width: 74%;
-	}
-	.edu_container li {
-		height: 110px;
-		margin-top: 20px;
-	}
-	.official_box {
-		width: 74%;
-	}
-}
-
-@media (max-width: 360px) {
-	.official_box {
-		width: 70%;
-	}
-	.edu_container li {
-		height: 130px;
-	}
-}
-
-
-/*成功案例样式开始*/
-
-.successful_content {
-	max-width: 1600px;
+.page2-con{
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	width: 80%;
+	max-width: 500px;
 	margin: auto;
-	font-size: 0;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+	transform: translateY(-50%); 
 }
-
-.successful_content li {
-	width: 33.3333%;
-	display: inline-block;
-	margin-top: 30px;
-}
-
-.successful_content li img {
+.month{
+	width: 100%;
+	max-width: 360px;
 	margin: auto;
+}
+.creative{
+	position: absolute;
+	top: 50%;
+	width: 70%;
+	left: 0;
+	right: 0;
+	margin: auto;
+	max-width: 240px;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+.page2-con img{
+	width: 100%
+}
+.page2-desc{
+	padding-top: 40px;
+}
+.page2-desc p{
+	font-size: 20px;
+	color: #fff;
+}
+
+.page2-desc span{
+	font-size: 10px;
+	color: #fff;
+}
+
+/* 第二屏样式结束 */
+
+
+/* 第三屏样式开始 */
+
+.page3-con{
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	width: 86%;
+	max-width: 500px;
+	margin: auto;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+	transform: translateY(-50%); 
+}
+.ball-line, .flower, .page3-desc{
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	margin: auto;
+	webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+	transform: translateY(-50%);
+	
+}
+.ball-line{
+	width: 100%;
+	max-width: 500px;
+	z-index: 10;
+}
+.flower{
 	width: 90%;
+	max-width: 400px;
+	z-index: 9;
+}
+.page3-con img{
+	width: 100%
+}
+.page3-desc{
+	z-index: 11;
+}
+.page3-desc p{
+	font-size: 32px;
+	color: #fff;
 }
 
-
-/*成功案例样式结束*/
-
-@media (max-width:768px) {
-	.successful_content li {
-		width: 50%;
-	}
+.page3-desc span{
+	font-size: 16px;
+	color: #fff;
+}
+@media (max-width: 500px) {
+	.page3-desc p{
+	font-size: 24px;
+	color: #fff;
 }
 
-@media (max-width:500px) {
-	.successful_content li {
-		width: 100%;
-	}
+.page3-desc span{
+	font-size: 12px;
+	color: #fff;
 }
+}
+/* 第三屏样式结束 */
+
+/* 第四屏样式开始 */
+
+.page4-con{
+	position: absolute;
+	top: 50%;
+	left: 0;
+	right: 0;
+	width: 92%;
+	max-width: 500px;
+	margin: auto;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+	transform: translateY(-50%); 
+}
+.stock{
+	position: absolute;
+	width: 90%;
+	top: 50%;
+	left: 0;
+	right: 0;
+	margin: auto;
+	max-width: 400px;
+	-webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+	transform: translateY(-50%); 
+}
+.line-bg{
+	width: 100%;
+	max-width: 500px;
+	min-width: 320px;
+}
+.page4-con img{
+	width: 100%
+}
+
+.page4-desc p{
+	font-size: 18px;
+	color: #333;
+}
+
+.page4-desc span{
+	display: block;
+	font-size: 10px;
+	color: #333;
+}
+
+/* 第四屏样式结束 */
