--- a/css/layout.css
+++ b/css/layout.css
@@ -1,27 +1,29 @@
+@charset "UTF-8";
 /*
 * @Author: clj
 * @Date:   2017-11-25 20:29:41
 * @Last Modified by:   Administrator
-* @Last Modified time: 2017-11-26 15:50:46
+* @Last Modified time: 2018-02-12 19:12:55
 */
 * {
-	margin: 0;
-	padding: 0;
-	font-family: "微软雅黑", "microsoft yahei";
+  margin: 0;
+  padding: 0;
+  font-family: "微软雅黑", "microsoft yahei";
 }
+
 ul,
 li {
-	list-style: none;
+  list-style: none;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 img {
-	border: none;
-	outline: none;
-	display: block;
+  border: none;
+  outline: none;
+  display: block;
 }
 
 h1,
@@ -30,104 +32,288 @@ h3,
 h4,
 h5,
 h6 {
-	font-weight: normal;
+  font-weight: normal;
 }
-i{
-	list-style: none;
+
+i {
+  list-style: none;
 }
+
 input {
-	outline: none;
+  outline: none;
 }
 
 textarea {
-	outline: none;
-	resize: none;
+  outline: none;
+  resize: none;
 }
 
 button {
-	outline: none;
-	border: none;
+  outline: none;
+  border: none;
 }
-.pr{
-	position: relative;
-}
-.clearfix{
-	zoom: 1;
+.slide-meun
+.pr {
+  position: relative;
 }
 
-.clearfix:after{
-	display: block;
-	content: " ";
-	clear: both;
-	width: 0;
-	height: 0;
-	opacity: 0;
+.clearfix {
+  zoom: 1;
+}
+
+.clearfix:after {
+  display: block;
+  content: " ";
+  clear: both;
+  width: 0;
+  height: 0;
+  opacity: 0;
 }
 
 .clear {
-	clear: both;
+  clear: both;
 }
 
-.logo{
-	position: fixed;
-	left: 15px;
-	top: 10px;
-	z-index: 12;
-	width: 60px;
+.logo {
+  position: fixed;
+  left: 15px;
+  top: 10px;
+  z-index: 12;
+  width: 60px;
 }
-.logo img{
-	width: 100%;
+
+.logo img {
+  width: 100%;
 }
-.swiper-slide.menu {
-	min-width: 100px;
-	width: 70%;
+
+/* 侧滑菜单开始 */
+.slide-mask {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  margin: auto;
+  background: rgba(255, 255, 255, 0.8);
+  z-index: 9998;
+  display: none;
+}
+.swiper-slide.menu{
 	max-width: 320px;
-	background: rgba(0,0,0, 1);
-	color: #fff;
+}
+.slide-meun {
+  min-width: 100px;
+  height: 100%;
+  width: 100%;
+  max-width: 320px;
+  background: #000;
+  color: #fff;
+  padding-top: 100px;
+  text-align: right;
+  display: block;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+}
+.slide-meun .slider-bar {
+  width: 100%;
+}
+.slide-meun .slider-bar a {
+  color: #fff;
+  display: block;
+  margin-right: 15px;
+}
+.slide-meun .slider-bar .nav-en {
+  font-size: 26px;
+  font-weight: 700;
+}
+.slide-meun .slider-bar .nav-cn {
+  font-size: 14px;
+}
+
+.slide-meun .slider-bar ul li {
+  padding: 6px 0;
+  margin-top: 30px;
+  width: 100%;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  /* 引用混合样式 */
+}
+
+.line {
+  width: 20%;
+  height: 2px;
+  background: #9ebeff;
+  margin: 2px 0;
+  display: inline-block;
+  transition: all 0.3s ease-in-out;
+  -webkit-transition: all 0.3s ease-in-out;
+  -moz-transition: all 0.3s ease-in-out;
+  -ms-transition: all 0.3s ease-in-out;
+  /* 引用混合样式 */
+}
+
+@media (min-width: 768px) {
+  .slide-meun .slider-bar ul li:hover {
+    background: #222;
+  }
+  .slide-meun .slider-bar ul li:hover .line {
+    width: 100%;
+  }
 }
 .content {
-	width: 100%;
+  width: 100%;
 }
 
 .menu-button {
-	position: fixed;
-	top: 0px; 
-	right: 0;
-	padding: 15px;
-	cursor: pointer;
-	-webkit-transition: .3s;
-	transition: .3s;
-	z-index: 100;
+  position: fixed;
+  top: 0px;
+  right: 0;
+  padding: 15px;
+  cursor: pointer;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+  z-index: 100000;
 }
+
 .menu-button .bar:nth-of-type(1) {
-	margin-top: 0px;
+  margin-top: 0px;
 }
 .menu-button .bar:nth-of-type(3) {
-	margin-bottom: 0px;
+  margin-bottom: 0px;
 }
 
 .bar {
-	position: relative;
-	display: block;
-	width: 30px;
-	height: 2px;
-	margin: 8px auto;
-	background-color: #999;
-	border-radius: 10px;
-	-webkit-transition: .3s;
-	transition: .3s;
+  position: relative;
+  display: block;
+  width: 30px;
+  height: 2px;
+  margin: 8px auto;
+  background-color: #999;
+  border-radius: 10px;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
 }
 
 .cross .bar:nth-of-type(1) {
-	-webkit-transform: translateY(10px) rotate(-45deg);
-	-ms-transform: translateY(10px) rotate(-45deg);
-	transform: translateY(10px) rotate(-45deg);
+  -webkit-transform: translateY(10px) rotate(-45deg);
+  -ms-transform: translateY(10px) rotate(-45deg);
+  transform: translateY(10px) rotate(-45deg);
 }
 .cross .bar:nth-of-type(2) {
-	opacity: 0;
+  opacity: 0;
 }
 .cross .bar:nth-of-type(3) {
-	-webkit-transform: translateY(-10px) rotate(45deg);
-	-ms-transform: translateY(-10px) rotate(45deg);
-	transform: translateY(-10px) rotate(45deg);
+  -webkit-transform: translateY(-10px) rotate(45deg);
+  -ms-transform: translateY(-10px) rotate(45deg);
+  transform: translateY(-10px) rotate(45deg);
+}
+
+/* 侧滑菜单结束 */
+.copy-container {
+  margin-top: 60px;
+}
+
+.copy-ul {
+  width: 100%;
+}
+
+.copy-ul li {
+  width: 50%;
+  float: left;
+  text-align: center;
+  padding: 40px 0;
+}
+.copy-ul li h4 {
+  font-size: 20px;
+}
+.copy-ul li a {
+  color: #fff;
+}
+.copy-ul li .hr {
+  position: relative;
+  width: 60px;
+  height: 2px;
+  right: 2px;
+  background: #717171;
+  margin: 10px auto 0;
+}
+.copy-ul li .hr span {
+  position: absolute;
+  right: -10px;
+  top: -7px;
+  display: block;
+  width: 0;
+  height: 0;
+  border-top: 8px solid transparent;
+  border-left: 10px solid #717171;
+  border-bottom: 8px solid transparent;
+}
+
+.copy-ul li:first-of-type {
+  background: #17171b;
+}
+
+.copy-ul li:last-of-type {
+  background: #131316;
+}
+
+.scoll-top .scoll-top-text {
+  width: 50px;
+  height: 48px;
+  margin: auto;
+  color: #fff;
+  line-height: 48px;
+  text-align: center;
+  font-size: 14px;
+  background: url(../../images/about/scroll-top.png) no-repeat center;
+  background-size: cover;
+  cursor: pointer;
+}
+.scoll-top .scoll-top-line {
+  width: 1px;
+  height: 100px;
+  background: #242424;
+  margin: auto;
+}
+
+.copy-contact-list {
+  display: flex;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flex;
+  justify-content: center;
+  margin: 30px 0 20px 0;
+}
+.copy-contact-list li {
+  margin: 0 10px;
+  width: 40px;
+}
+.copy-contact-list li a {
+  display: block;
+  width: 40px;
+  height: 40px;
+  border: 1px solid #fff;
+  border-radius: 50%;
+}
+.copy-contact-list li a img {
+  width: 100%;
+}
+
+.copy-bottom {
+  padding: 60px 0 40px 0;
+  width: 100%;
+  background: #000;
+  text-align: center;
+}
+.copy-bottom .title {
+  padding: 0 20px;
+  color: #fff;
+  font-size: 20px;
+}
+.copy-bottom .copyright {
+  color: #fff;
 }
